--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="bootstrap-4.3.1/js/bootstrap.min.js"></script>
     </head>
     <body class="body">
-        <div id="filterNav" class="sidenav">
+        <div class="sidenav">
             <div class="filter-title-container">
                 <div class="filter-title">
                     <h6>Filters</h6>
