Refactoring to make code according to bem

--- a/headlines.html
+++ b/headlines.html
@@ -13,15 +13,14 @@
         <script src="bootstrap-4.3.1/js/bootstrap.min.js"></script>
     </head>
     <body class="body">
-        <div class="main-header">  
-            <object type="image/svg+xml" data="icon.svg" id="company-logo">
+		<div class="main-header">  
+            <object type="image/svg+xml" data="icon.svg" class="company-logo">
                Your browser does not support SVG
             </object>  
-            <ul id="pages-title">
+            <ul class="pages-title">
               <li><a href="index.html">Home</a></li>
               <li><a href="headlines.html" class="active">Headlines</a></li>
             </ul>            
         </div>
     </body>
 </html>
-
