delete extra ids

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<div class="child-panel">
 						<div class="child2">
 							<h3 class="tile-title">Team Performance</h3>
-							<table id="team-perf-table">
+							<table class="team-perf-table">
 								<tr>
 									<th><a href="javascript:void(0)" onclick="sortTableAlphabetically()"><i class="fa fa-sort" aria-hidden="true"></i></a></th>
 									<th class="table-header" onclick="sortTableOsat()">Overall <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
