Fixing an overflow of the tile

--- a/index.html
+++ b/index.html
@@ -84,34 +84,34 @@
                 <div class="flex-container1">
                     <div class="child-panel">
 						<div class="child1">
-							<h3 class="tile-title">NPS</h3>
-							<p id="nps-average" class="tile-data"></p>
+							<h3 class="tile-title child1__tile-title">NPS</h3>
+							<p id="nps-average" class="tile-data child1__tile-data"></p>
 						</div>
                     </div>
                     <div class="child-panel">
 						<div class="child1">
-							<h3 class="tile-title">Easy</h3>
-							<p id="easy-average" class="tile-data"></p>
+							<h3 class="tile-title child1__tile-title">Easy</h3>
+							<p id="easy-average" class="tile-data child1__tile-data"></p>
 						</div>
                     </div>
                     <div class="child-panel">
 						<div class="child1">
-							<h3 class="tile-title">Overall Satisfaction</h3>
-							<p id="osat-average" class="tile-data"></p>
+							<h3 class="tile-title child1__tile-title">Overall Satisfaction</h3>
+							<p id="osat-average" class="tile-data child1__tile-data"></p>
 						</div>
                     </div> 
                     <div class="child-panel">
 						<div class="child1">
-							<h3 class="tile-title">Likely To Renew</h3>
-							<p id="ltr-average" class="tile-data"></p>
+							<h3 class="tile-title child1__tile-title">Likely To Renew</h3>
+							<p id="ltr-average" class="tile-data child1__tile-data"></p>
 						</div>
                     </div>
 				</div>
 				<div class="flex-container2">
 					<div class="child-panel">
 						<div class="child2">
-							<h3 class="tile-title">Team Performance</h3>
-							<table class="team-perf-table">
+							<h3 class="tile-title child2__tile-data">Team Performance</h3>
+							<table class="team-perf-table child2__team-perf-table">
 								<tr>
 									<th><a href="javascript:void(0)" onclick="sortTableAlphabetically()"><i class="fa fa-sort" aria-hidden="true"></i></a></th>
 									<th class="table-header" onclick="sortTableOsat()">Overall <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
