--- a/index.html
+++ b/index.html
@@ -82,79 +82,81 @@
             <h5 class="main__title">Performance & Drivers</h5>
             <div class="main__container">
                 <div class="flex-container1">
-                    <div class="child-panel">
+				<div class="column1">
+                    <div class="child-panel1">
 						<div class="child1">
 							<h3 class="tile-title child1__tile-title">NPS</h3>
 							<p id="nps-average" class="tile-data child1__tile-data"></p>
 						</div>
-                    </div>
-                    <div class="child-panel">
+                   
 						<div class="child1">
 							<h3 class="tile-title child1__tile-title">Easy</h3>
 							<p id="easy-average" class="tile-data child1__tile-data"></p>
 						</div>
                     </div>
-                    <div class="child-panel">
+                    <div class="child-panel1">
 						<div class="child1">
 							<h3 class="tile-title child1__tile-title">Overall Satisfaction</h3>
 							<p id="osat-average" class="tile-data child1__tile-data"></p>
 						</div>
-                    </div> 
-                    <div class="child-panel">
+               
 						<div class="child1">
 							<h3 class="tile-title child1__tile-title">Likely To Renew</h3>
 							<p id="ltr-average" class="tile-data child1__tile-data"></p>
 						</div>
-                    </div>
+					</div>
 				</div>
-				<div class="flex-container2">
-					<div class="child-panel">
+				<div class="column2">
+					<div class="child-panel2">
 						<div class="child2">
-							<h3 class="tile-title child2__tile-data">Team Performance</h3>
-							<table class="team-perf-table child2__team-perf-table">
-								<tr>
-									<th><a href="javascript:void(0)" onclick="sortTableAlphabetically()"><i class="fa fa-sort" aria-hidden="true"></i></a></th>
-									<th class="table-header" onclick="sortTableOsat()">Overall <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
-									<th class="table-header" onclick="sortTableRsp()">Responsiveness <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
-									<th class="table-header" onclick="sortTablePrd()">Product knowledge <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
-								</tr>
-								<tr>
-									<th class="title-th">Global</th>
-									<th></th>
-									<th></th>
-									<th></th>
-								</tr>
-								<tr>
-									<th class="title-th">EMEA</th>
-									<th></th>
-									<th></th>
-									<th></th>
-								</tr>
-								<tr>
-									<th class="title-th">Canada</th>
-									<th></th>
-									<th></th>
-									<th></th>
-								</tr>
-								<tr>
-									<th class="title-th">United States</th>
-									<th></th>
-									<th></th>
-									<th></th>
-								</tr>
-								<tr>
-                                <th class="title-th">APAC</th>
-                                <th></th>
-                                <th></th>
-                                <th></th>
-								</tr>
-								<tr>
-									<th class="title-th">S. America</th>
-									<th></th>
-									<th></th>
-									<th></th>
-								</tr>
-							</table>
+							<h3 class="tile-title child2__tile-data">Team Performance</h3>						
+								<div class="table-wrap">
+									<table class="team-perf-table child2__team-perf-table">
+										<tr>
+											<th class="headcol"><a href="javascript:void(0)" onclick="sortTableAlphabetically()"><i class="fa fa-sort" aria-hidden="true"></i></a></th>
+											<th class="table-header" onclick="sortTableOsat()">Overall <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
+											<th class="table-header" onclick="sortTableRsp()">Responsiveness <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
+											<th class="table-header" onclick="sortTablePrd()">Product knowledge <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
+										</tr>
+										<tr>
+											<th class="title-th headcol">Global</th>
+											<th></th>
+											<th></th>
+											<th></th>
+										</tr>
+										<tr>
+											<th class="title-th headcol">EMEA</th>
+											<th></th>
+											<th></th>
+											<th></th>
+										</tr>
+										<tr>
+											<th class="title-th headcol">Canada</th>
+											<th></th>
+											<th></th>
+											<th></th>
+										</tr>
+										<tr>
+											<th class="title-th headcol">United States</th>
+											<th></th>
+											<th></th>
+											<th></th>
+										</tr>
+										<tr>
+										<th class="title-th headcol">APAC</th>
+										<th></th>
+										<th></th>
+										<th></th>
+										</tr>
+										<tr>
+											<th class="title-th headcol">S. America</th>
+											<th></th>
+											<th></th>
+											<th></th>
+										</tr>
+									</table>								
+							</div>
+							</div>
 						</div>
 					</div>
                 </div>
