--- a/index.html
+++ b/index.html
@@ -85,83 +85,85 @@
                 	<div class="small-tiles-container">
                     	<div class="small-tile">
 							<div class="small-tile-info">
-								<h3 class="tile-title">NPS</h3>
-								<p id="nps-average" class="tile-data"></p>
+								<h3 class="tile-title small-tile-info__title">NPS</h3>
+								<p id="nps-average" class="tile-data small-tile-info__title__data"></p>
 							</div>
-                   		</div>
-                   		<div class="small-tile">
+                   		</div>					
+						<div class="small-tile">
 							<div class="small-tile-info">
-								<h3 class="tile-title">Easy</h3>
-								<p id="easy-average" class="tile-data"></p>
+								<h3 class="tile-title small-tile-info__title">Overall Satisfaction</h3>
+								<p id="osat-average" class="tile-data small-tile-info__title__data"></p>
+							</div>
+						</div> 
+                    </div>
+					<div class="small-tiles-container">
+						<div class="small-tile">
+							<div class="small-tile-info">
+								<h3 class="tile-title small-tile-info__title">Easy</h3>
+								<p id="easy-average" class="tile-data small-tile-info__title__data"></p>
 							</div>
 						</div>
-                    
 						<div class="small-tile">
 							<div class="small-tile-info">
-								<h3 class="tile-title">Overall Satisfaction</h3>
-								<p id="osat-average" class="tile-data"></p>
-							</div>
-						</div>          
-						<div class="small-tile">
-							<div class="small-tile-info">
-								<h3 class="tile-title">Likely To Renew</h3>
-								<p id="ltr-average" class="tile-data"></p>
+								<h3 class="tile-title small-tile-info__title">Likely To Renew</h3>
+								<p id="ltr-average" class="tile-data small-tile-info__title__data"></p>
 							</div>
 						</div>
 					</div>
 					<div class="big-tile">
 						<div class="big-tile-info">
-							<h3 class="tile-title">Team Performance</h3>						
-								<div class="table-wrap">
-									<table class="team-perf-table">
-										<tr>
-											<th class="headcol"><a href="javascript:void(0)" onclick="sortTableAlphabetically()"><i class="fa fa-sort" aria-hidden="true"></i></a></th>
-											<th class="table-header" onclick="sortTableOsat()">Overall <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
-											<th class="table-header" onclick="sortTableRsp()">Responsiveness <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
-											<th class="table-header" onclick="sortTablePrd()">Product knowledge <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
-										</tr>
-										<tr>
-											<th class="title-th headcol">Global</th>
-											<th></th>
-											<th></th>
-											<th></th>
-										</tr>
-										<tr>
-											<th class="title-th headcol">EMEA</th>
-											<th></th>
-											<th></th>
-											<th></th>
-										</tr>
-										<tr>
-											<th class="title-th headcol">Canada</th>
-											<th></th>
-											<th></th>
-											<th></th>
-										</tr>
-										<tr>
-											<th class="title-th headcol">United States</th>
-											<th></th>
-											<th></th>
-											<th></th>
-										</tr>
-										<tr>
+							<h3 class="tile-title big-tile-info__title">Team Performance</h3>						
+							<div class="table-wrap big-tile-info__table">
+								<table class="team-perf-table">						
+									<tr>
+										<th class="headcol"><a href="javascript:void(0)" onclick="sortTableAlphabetically()"><i class="fa fa-sort" aria-hidden="true"></i></a></th>
+										<th class="table-header" onclick="sortTableOsat()">Overall <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
+										<th class="table-header" onclick="sortTableRsp()">Responsiveness<i class="fa fa-sort sort-icon" aria-hidden="true"></th>
+										<th class="table-header" onclick="sortTablePrd()">Product knowledge <i class="fa fa-sort sort-icon" aria-hidden="true"></th>
+									</tr>								
+									<tr>
+										<th class="title-th headcol">Global</th>
+										<th></th>
+										<th></th>
+										<th></th>
+									</tr>
+									<tr>
+										<th class="title-th headcol">EMEA</th>
+										<th></th>
+										<th></th>
+										<th></th>
+									</tr>
+									<tr>
+										<th class="title-th headcol">Canada</th>
+										<th></th>
+										<th></th>
+										<th></th>
+									</tr>
+									<tr>
+										<th class="title-th headcol">United States</th>
+										<th></th>
+										<th></th>
+										<th></th>
+									</tr>
+									<tr>
 										<th class="title-th headcol">APAC</th>
 										<th></th>
 										<th></th>
 										<th></th>
-										</tr>
-										<tr>
-											<th class="title-th headcol">S. America</th>
-											<th></th>
-											<th></th>
-											<th></th>
-										</tr>
-									</table>								
+									</tr>
+									<tr>
+										<th class="title-th headcol">S. America</th>
+										<th></th>
+										<th></th>
+										<th></th>
+									</tr>								
+								</table>								
 							</div>
 						</div>
 					</div>
-                </div>
-            </div>
+                </div> 
+			</div>	
+		</div>			
         <script src="data.json"></script>
         <script src="methods.js"></script>
         <script>
