--- a/page1.html
+++ b/page1.html
@@ -30,11 +30,11 @@
 						</a>
 					</li>
 					<li>
-						<a href="headlines.html" Title="Headlines" class="active-link">Headlines
+						<a href="headlines.html" Title="Headlines" class="unactive-link">Headlines
 						</a>
 					</li>
 					<li>
-						<a href="page1.html" Title="Page With A Really-Really-Really Loooong Title" class="unactive-link">Page With A Really-Really-Really Loooong Title
+						<a href="page1.html" Title="Page With A Really-Really-Really Loooong Title" class="active-link">Page With A Really-Really-Really Loooong Title
 						</a>					
 					</li>
 					<li>
