--- a/page2.html
+++ b/page2.html
@@ -30,7 +30,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="headlines.html" Title="Headlines" class="active-link">Headlines
+						<a href="headlines.html" Title="Headlines" class="unactive-link">Headlines
 						</a>
 					</li>
 					<li>
@@ -38,7 +38,7 @@
 						</a>					
 					</li>
 					<li>
-						<a href="page2.html" Title="Page 2" class="unactive-link">Page 2 
+						<a href="page2.html" Title="Page 2" class="active-link">Page 2 
 						</a>
 					</li>
 					<li>
