--- a/page5.html
+++ b/page5.html
@@ -30,7 +30,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="headlines.html" Title="Headlines" class="active-link">Headlines
+						<a href="headlines.html" Title="Headlines" class="unactive-link">Headlines
 						</a>
 					</li>
 					<li>
@@ -50,7 +50,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="page5.html" Title="Page 5" class="unactive-link">Page 5
+						<a href="page5.html" Title="Page 5" class="active-link">Page 5
 						</a>
 					</li>
 				</ul>
