--- a/page3.html
+++ b/page3.html
@@ -30,7 +30,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="headlines.html" Title="Headlines" class="active-link">Headlines
+						<a href="headlines.html" Title="Headlines" class="unactive-link">Headlines
 						</a>
 					</li>
 					<li>
@@ -42,7 +42,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="page3.html" Title="Page 3" class="unactive-link">Page 3
+						<a href="page3.html" Title="Page 3" class="active-link">Page 3
 						</a>
 					</li>
 					<li>
@@ -50,7 +50,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="page5.html" Title="Page 5" class="unactive-link">Page 5
+						<a href="page5.html" Title="Page 5" class="unactive-links">Page 5
 						</a>
 					</li>
 				</ul>
