--- a/page4.html
+++ b/page4.html
@@ -30,7 +30,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="headlines.html" Title="Headlines" class="active-link">Headlines
+						<a href="headlines.html" Title="Headlines" class="unactive-link">Headlines
 						</a>
 					</li>
 					<li>
@@ -46,7 +46,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="page4.html" Title="Page 4" class="unactive-link">Page 4
+						<a href="page4.html" Title="Page 4" class="active-link">Page 4
 						</a>
 					</li>
 					<li>
