Testing css grid

--- a/headlines.html
+++ b/headlines.html
@@ -65,14 +65,21 @@
 				</div>
 			</ul>
 		</div>
+		<div class="grid-container">
+			<div class="grid-item">One</div>
+			<div class="grid-item">Two</div>
+			<div class="grid-item">Three</div>
+			<div class="grid-item">Four</div>
+			<div class="grid-item">Five</div>
+		</div>		
     </body>
 	<script src="methods.js"></script>
+	<script src="data.json"></script>
 	<script>
 		 'use strict';
             var dataLength = Object.keys(data).length;
             var regions = ["Global", "EMEA", "Canada", "United States", "APAC", "S. America"];
             var tableValues = new Array(regions.length);
-            var ascAlphSort = false, ascOsatSort = false, ascRspSort = false, ascPrdSort = false;	
-			
+            var ascAlphSort = false, ascOsatSort = false, ascRspSort = false, ascPrdSort = false;		
 	</script>
 </html>
