--- a/headlines.html
+++ b/headlines.html
@@ -65,12 +65,16 @@
 				</div>
 			</ul>
 		</div>
-		<div class="grid-container">
-			<div class="grid-item">One</div>
-			<div class="grid-item">Two</div>
-			<div class="grid-item">Three</div>
-			<div class="grid-item">Four</div>
-			<div class="grid-item">Five</div>
+		<div class="grid-container">		
+			<div  class="grid-column">
+				<div class="grid-item grid-item__1">One</div>
+				<div class="grid-item grid-item__2">Two</div>
+			</div>
+			<div  class="grid-column">
+				<div class="grid-item grid-item__3">Three</div>
+				<div class="grid-item grid-item__4">Four</div>
+			</div>
+			<div class="grid-item grid-item__5">Five</div>
 		</div>		
     </body>
 	<script src="methods.js"></script>
