--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						</a>
 					</li>
 				</ul>
-				<button>More <i class="fa fa-angle-down" aria-hidden="true"> </i> </button>
+				<button>More <i class="fa fa-angle-down" aria-hidden="true"></i></button>
 				<ul class='overflow hidden'></ul>
 			</nav>		
         </div>
@@ -227,6 +227,7 @@
 		</div>			
         <script src="data.json"></script>
         <script src="methods.js"></script>
+		<script src="highcharts_gauge.js"></script>
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/highcharts-more.js"></script>
 		<script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
