--- a/page2.html
+++ b/page2.html
@@ -67,6 +67,7 @@
 		</div>
     </body>
 	<script src="methods.js"></script>
+	<script src="data.json"></script>
 	<script>
 		 'use strict';
             var dataLength = Object.keys(data).length;
